# discuz

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  cheatsheet.rs  codecov.yml  cspell.json  docker-compose.sample.yml  makefile  rustfmt.toml
apps/db-migration/: Cargo.toml
apps/db-migration/src/: main.rs
apps/db-migration/src/utils/: database.rs
apps/server/: Cargo.toml  Makefile.toml
apps/server/src/: app.rs  errors.rs  lib.rs  main.rs
apps/server/src/auth/: auth_route.rs  errors.rs  mod.rs
apps/server/src/auth/auth_controller/: get_tokens.rs  mod.rs
apps/server/src/category/: category_route.rs  errors.rs  mod.rs
apps/server/src/category/category_controller/: create.rs  list.rs
apps/server/src/category/dto/: category.rs
apps/server/src/config/: config_route.rs  errors.rs  mod.rs
apps/server/src/config/config_controller/: get_config.rs
apps/server/src/file/: errors.rs  file_route.rs  mod.rs
apps/server/src/file/file_controller/: get_upload_url.rs  mod.rs
apps/server/src/post/: errors.rs  mod.rs  post_route.rs
apps/server/src/post/dto/: post.rs
apps/server/src/post/post_controller/: create.rs  delete.rs  get.rs  update.rs
apps/server/src/post_category/: errors.rs  mod.rs  post_category_route.rs
apps/server/src/post_category/dto/: mod.rs  post_category.rs
apps/server/src/post_category/post_category_controller/: create.rs
apps/server/src/user/: mod.rs  user_route.rs
apps/server/src/user/dto/: user.rs
apps/server/src/user/user_controller/: get_me.rs  mod.rs  update_user.rs
apps/server/src/utils/: app_state.rs  auth.rs
apps/server/tests/: integration_test.rs
apps/server/tests/integrations/: health_check.rs  mod.rs
apps/server/tests/integrations/category/: create.rs  create_error_401.rs  create_error_403.rs  list.rs  list_403.rs  mod.rs
apps/server/tests/integrations/config/: get_config.rs
apps/server/tests/integrations/post/: create.rs  delete.rs  update.rs
apps/server/tests/integrations/post_category/: create.rs  create_error_403.rs  mod.rs
apps/server/tests/integrations/user/: get_me.rs  get_me_401.rs  get_me_403.rs  mod.rs  patch_user.rs
libs/actix-helmet/: Cargo.toml  README.md
libs/actix-helmet/src/: builder.rs  inner.rs  lib.rs  middleware.rs  policies.rs
libs/core/: Cargo.toml  Makefile.toml
libs/core/src/: constants.rs  lib.rs
libs/core/src/migration/: m_20221217_000001_create_user_table.rs  m_20230111_000002_create_file_table.rs  m_20230113_000003_create_category_table.rs  m_20230113_000003_create_post_category_table.rs  m_20230113_000003_create_post_table.rs  m_20230113_000004_create_post_table.rs  m_20230114_000005_create_user_role_column.rs  m_20230116_000005_create_post_comment.rs  m_20230116_000005_create_post_reply.rs  m_20230116_000005_create_post_reply_table.rs  m_20230116_000006_create_post_reply_table.rs  m_20230124_000006_create_user_ban_history_table.rs  m_20230124_000007_create_user_ban_history_table.rs  m_20230130_000008_create_default_categories.rs  m_20230131_000009_create_apps_version_table.rs  m_20230201_000010_create_config_table.rs  mod.rs
libs/core/src/repository/: constants.rs  mod.rs  repo_category.rs  repo_config.rs  repo_file.rs  repo_post.rs  repo_post_category.rs  repo_post_comment.rs  repo_post_reply.rs  repo_user.rs  repo_user_ban_history.rs
libs/core/src/repository/database/: category.rs  db_category.rs  db_config.rs  db_file.rs  db_post.rs  db_post_category.rs  db_post_comment.rs  db_post_reply.rs  db_thread.rs  db_user.rs  db_user_ban_history.rs  mod.rs
libs/core/src/service/: factory.rs  mod.rs  prelude.rs
libs/core/src/service/auth/: auth_service.rs  constants.rs  errors.rs  mod.rs
libs/core/src/service/category/: category_service.rs  errors.rs  mod.rs
libs/core/src/service/config/: config_service.rs  constants.rs  errors.rs  mod.rs
libs/core/src/service/file/: constants.rs  errors.rs  file_service.rs
libs/core/src/service/post/: errors.rs  mod.rs  post_service.rs
libs/core/src/service/post_category/: errors.rs  mod.rs  post_category_service.rs
libs/core/src/service/post_comment/: errors.rs  mod.rs  post_comment_service.rs
libs/core/src/service/post_reply/: mod.rs  (+2 more)
libs/core/src/utils/: db_tools.rs
libs/core/tests/: unit_test.rs
libs/core/tests/unit/: auth.rs  category.rs  config.rs  file.rs  migration.rs  mock_auth_provider.rs  mock_cognito_provider.rs  mod.rs  post.rs  post_category.rs  post_comment.rs  post_reply.rs  user.rs  user_ban_history.rs
libs/layers/: Cargo.toml  Makefile.toml
libs/layers/src/: constants.rs  lib.rs
libs/layers/src/migration/: m_20221217_000001_create_user_table.rs  m_20230111_000002_create_file_table.rs  m_20230113_000003_create_post_table.rs  m_20230114_000004_create_user_role_column.rs  m_20230116_000005_create_post_comment.rs  mod.rs
libs/layers/src/repository/: errors.rs  mod.rs  repo_file.rs  repo_post.rs  repo_post_category.rs  repo_post_comment.rs  repo_user.rs
libs/layers/src/service/: factory.rs  mod.rs
libs/layers/src/utils/: db.rs  db_tools.rs  mod.rs
libs/layers/tests/: unit_test.rs
libs/layers/tests/unit/: auth.rs  migration.rs  mod.rs  post.rs  post_category.rs  user.rs
libs/utils/: Cargo.toml
libs/utils/dict/: http-errors.json
libs/utils/src/: amazon.rs  config.rs  db_connection.rs  http_errors.rs  jwt.rs  lib.rs  redis.rs
libs/utils/tests/unit/: db_connection.rs  http_errors.rs  mod.rs  redis.rs
(+147 files in other folders)
