[package]
name = "db-migration"
version = "0.1.0"
edition = "2021"
authors = ["Ken <ken20206@gmail.com>"]
license = "ISC"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# User Libraries
discuz-layers = { path = "../../libs/layers" }
discuz-utils = { path = "../../libs/utils" }
#
dotenv = "0.15.0"
sea-orm = { version = "0.10.5", features = [
	"sqlx-mysql",
	"runtime-tokio-native-tls",
] }
tokio = { version = "1", features = ["full"] }
