[package]
name = "discuz-server"
version = "0.1.0"
edition = "2021"
authors = ["Ken <ken20206@gmail.com>"]
license = "ISC"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
anyhow = "1.0.68"
async-trait = "0.1.60"
aws-config = "0.52.0"
chrono = "0.4.23"
derive_more = "0.99.17"
discuz-core = { path = "../../libs/core" }
discuz-utils = { path = "../../libs/utils" }
dotenv = "0.15.0"
error-stack = "0.2.4"
fred = "5.2.0"
futures = "0.3.25"
futures-util = "0.3.25"
sea-orm = { version = "0.10.5", features = [
	"sqlx-mysql",
	"sqlx-sqlite",
	"runtime-tokio-native-tls",
] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.16"
uuid = "1.2.2"
validator = "0.16.0"
validator_derive = "0.16.0"
