[package]
name = "discuz-core"
version = "0.1.0"
authors = ["Ken <ken20206@gmail.com>"]
rust-version = "1.65.0"
description = "The main business logic of this application"
edition = "2021"
license = "ISC"
keywords = ["discuz", "core"]

[dependencies]
async-recursion = "1.0.2"
async-trait = "0.1.60"
aws-config = "0.52.0"
aws-sdk-cognitoidentityprovider = "0.22.0"
aws-sdk-s3 = "0.22.0"
chrono = "0.4.23"
derive_more = "0.99.17"
discuz-utils = { path = "../utils" }
dotenv = "0.15.0"
error-stack = "0.2.4"
fake = "2.5.0"
fred = "5.2.0"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["json"] }
sea-orm = { version = "0.10.5", features = [
	"sqlx-mysql",
	"sqlx-sqlite",
	"runtime-tokio-native-tls",
] }
sea-orm-migration = "0.10.5"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
slugify = "0.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = "1.2.2"

[dev-dependencies]
